--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>SMART on FHIR app tutorial</title>
+    <title>vinays75-coder Example-SMART-App</title>
 
     <style>
       .highlight table td { padding: 5px; }
@@ -129,7 +129,6 @@
 </ul>
 
 <h1 id="prerequisites">Prerequisites</h1>
-        <h2> Vinay Test </h2>
 
 <ul>
 <li>A public <a href="http://www.github.com">GitHub</a> account</li>
