Adding attribute Marital Status

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -40,6 +40,10 @@
           <th>Date of Birth:</th>
           <td id='birthdate'></td>
         </tr>
+        <tr>
+          <th>Marital Status:</th>
+          <td id='maritalstatus'></td>
+        </tr>
       </table>
       <h2>Observation Resource</h2>
       <table>
