--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -25,6 +25,10 @@
       <h2>Patient Resource</h2>
       <table>
         <tr>
+          <th>Patient Identifier:</th>
+          <td id='identifier'></td>
+        </tr>
+        <tr>
           <th>First Name:</th>
           <td id='fname'></td>
         </tr>
