printing gender in identifier for fun

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -26,7 +26,7 @@
       <table>
         <tr>
           <th>Patient Identifier:</th>
-          <td id='identifier'></td>
+          <td id='gender'></td>
         </tr>
         <tr>
           <th>First Name:</th>
