changing identifier to communication

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -25,8 +25,8 @@
       <h2>Patient Resource</h2>
       <table>
         <tr>
-          <th>Patient Identifier:</th>
-          <td id='gender'></td>
+          <th>Patient Communication:</th>
+          <td id='communication'></td>
         </tr>
         <tr>
           <th>First Name:</th>
