--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -95,6 +95,7 @@
       extractData().then(
         //Display Patient Demographics and Observations if extractData was success
         function(p) {
+          print(p);
           drawVisualization(p);
         },
 
