--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -92,6 +92,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
+      print(p);
       extractData().then(
         //Display Patient Demographics and Observations if extractData was success
         function(p) {
